Ajuste de visualização do card que foi clicado. Ajuste de nome da função verDetalhesDoCard

--- a/src/output.css
+++ b/src/output.css
@@ -253,6 +253,9 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-items-center {
+    justify-items: center;
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
