--- a/src/output.css
+++ b/src/output.css
@@ -11,6 +11,8 @@
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
@@ -191,29 +193,17 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-2 {
-    top: calc(var(--spacing) * 2);
-  }
-  .top-2\/4 {
-    top: calc(2/4 * 100%);
-  }
   .top-\[30\%\] {
     top: 30%;
   }
   .left-\[8\%\] {
     left: 8%;
   }
-  .left-\[10\%\] {
-    left: 10%;
-  }
   .z-50 {
     z-index: 50;
   }
   .col-span-full {
     grid-column: 1 / -1;
-  }
-  .row-start-2 {
-    grid-row-start: 2;
   }
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
@@ -255,17 +245,8 @@
   .h-auto {
     height: auto;
   }
-  .h-dvh {
-    height: 100dvh;
-  }
-  .w-\[80\%\] {
-    width: 80%;
-  }
   .w-\[100\%\] {
     width: 100%;
-  }
-  .w-\[100px\] {
-    width: 100px;
   }
   .w-fit {
     width: fit-content;
@@ -273,17 +254,11 @@
   .w-full {
     width: 100%;
   }
-  .max-w-\[200px\] {
-    max-width: 200px;
-  }
   .max-w-\[280px\] {
     max-width: 280px;
   }
   .max-w-\[300px\] {
     max-width: 300px;
-  }
-  .max-w-\[350px\] {
-    max-width: 350px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -303,11 +278,14 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
   .grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+  .grid-rows-\[auto_150px\] {
+    grid-template-rows: auto 150px;
+  }
+  .grid-rows-\[auto_auto\] {
+    grid-template-rows: auto auto;
   }
   .place-content-center {
     place-content: center;
@@ -317,9 +295,6 @@
   }
   .justify-center {
     justify-content: center;
-  }
-  .justify-end {
-    justify-content: flex-end;
   }
   .justify-items-center {
     justify-items: center;
@@ -336,16 +311,10 @@
   .place-self-center {
     place-self: center;
   }
-  .justify-self-center {
-    justify-self: center;
-  }
   .truncate {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-  }
-  .overflow-x-clip {
-    overflow-x: clip;
   }
   .scroll-smooth {
     scroll-behavior: smooth;
@@ -391,14 +360,14 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
-  .px-8 {
-    padding-inline: calc(var(--spacing) * 8);
-  }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
   .pb-0 {
     padding-bottom: calc(var(--spacing) * 0);
+  }
+  .pb-5 {
+    padding-bottom: calc(var(--spacing) * 5);
   }
   .text-center {
     text-align: center;
@@ -418,6 +387,10 @@
   .text-6xl {
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
   }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
@@ -458,17 +431,6 @@
   .\*\:text-\[\#ffbb00\] {
     :is(& > *) {
       color: #ffbb00;
-    }
-  }
-  .placeholder\:text-sm {
-    &::placeholder {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
-  .placeholder\:text-amber-100 {
-    &::placeholder {
-      color: var(--color-amber-100);
     }
   }
   .hover\:scale-110 {
@@ -535,16 +497,6 @@
       outline-style: none;
     }
   }
-  .sm\:col-span-full {
-    @media (width >= 40rem) {
-      grid-column: 1 / -1;
-    }
-  }
-  .sm\:place-self-center {
-    @media (width >= 40rem) {
-      place-self: center;
-    }
-  }
   .md\:col-\[1\] {
     @media (width >= 48rem) {
       grid-column: 1;
@@ -553,11 +505,6 @@
   .md\:col-\[3\] {
     @media (width >= 48rem) {
       grid-column: 3;
-    }
-  }
-  .md\:col-start-1 {
-    @media (width >= 48rem) {
-      grid-column-start: 1;
     }
   }
   .md\:grid-cols-3 {
@@ -570,46 +517,6 @@
       grid-template-rows: repeat(1, minmax(0, 1fr));
     }
   }
-  .md\:place-self-center {
-    @media (width >= 48rem) {
-      place-self: center;
-    }
-  }
-  .lg\:col-auto {
-    @media (width >= 64rem) {
-      grid-column: auto;
-    }
-  }
-  .lg\:col-span-1 {
-    @media (width >= 64rem) {
-      grid-column: span 1 / span 1;
-    }
-  }
-  .lg\:col-span-3 {
-    @media (width >= 64rem) {
-      grid-column: span 3 / span 3;
-    }
-  }
-  .lg\:col-end-3 {
-    @media (width >= 64rem) {
-      grid-column-end: 3;
-    }
-  }
-  .lg\:col-end-4 {
-    @media (width >= 64rem) {
-      grid-column-end: 4;
-    }
-  }
-  .lg\:row-start-1 {
-    @media (width >= 64rem) {
-      grid-row-start: 1;
-    }
-  }
-  .lg\:row-end-1 {
-    @media (width >= 64rem) {
-      grid-row-end: 1;
-    }
-  }
   .lg\:my-20 {
     @media (width >= 64rem) {
       margin-block: calc(var(--spacing) * 20);
@@ -620,11 +527,6 @@
       display: flex;
     }
   }
-  .lg\:grid-cols-3 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
   .lg\:grid-cols-5 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -633,11 +535,6 @@
   .lg\:grid-cols-\[max-content_max-content_max-content\] {
     @media (width >= 64rem) {
       grid-template-columns: max-content max-content max-content;
-    }
-  }
-  .lg\:grid-rows-1 {
-    @media (width >= 64rem) {
-      grid-template-rows: repeat(1, minmax(0, 1fr));
     }
   }
   .lg\:justify-around {
@@ -668,11 +565,6 @@
   .lg\:px-10 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 10);
-    }
-  }
-  .lg\:px-20 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 20);
     }
   }
   .lg\:px-30 {
